--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^2.1.1",
     "@strapi/design-system": "^1.18.0",
+    "@strapi/plugin-color-picker": "^4.24.0",
     "@strapi/plugin-i18n": "4.24.0",
     "@strapi/plugin-seo": "^1.9.8",
     "@strapi/plugin-users-permissions": "4.24.0",
